# asr

./: README.md
practica1/: CMakeLists.txt  package.xml
practica1/src/: nodo_primero.cpp
practica2/: CMakeLists.txt  package.xml
practica2/include/practica2/: Detector.h  detect.h
practica2/src/: bumpgo_laser.cpp
practica2/src/practica2/: Detector.cpp  detect.cpp
practica3/: CMakeLists.txt  package.xml
practica3/fsm/: Practica3Impl.bica  Practica3Impl.cpp  Practica3Impl.h  practica3.bica  practica3.cpp  practica3.h  practica_3impl.bica  practica_3impl.cpp  practica_3impl.h
practica3/include/practica3/: Forward.hpp  Perception.hpp  Practica3Impl.hpp  Turn.hpp
practica3/launcher/: practica3.launch
practica3/src/: forward_node.cpp  perception_node.cpp  practica3_node.cpp  turn_node.cpp
practica3/src/practica3/: Forward.cpp  Perception.cpp  Practica3Impl.cpp  Turn.cpp
practica4/: CMakeLists.txt  package.xml
practica4/fsm/: practica4.bica  practica4.cpp  practica4.h  sequence.bica  sequence.cpp  sequence.h  sequenced_destination.bica  sequenced_destination.cpp  sequenced_destination.h
practica4/include/practica4/: Navigate.hpp  Practica4Impl.hpp  SequenceImpl.hpp  navigate.hpp  sequenceImpl.hpp  sequenced_destintionImpl.hpp
practica4/launch/: navigate.launch  navigate_destination.launch  navigate_sequence.launch
practica4/param/: costmap_common_params.yaml  destination_params.yaml  destinations.yaml  dwa_local_planner_params.yaml
practica4/src/: nodo_destino.cpp  nodo_sequence.cpp  practica4_node.cpp
practica4/src/practica4/: Navigate.cpp  Practica4Impl.cpp  SequenceImpl.cpp  gotoDestination.cpp  navigate.cpp  sequenceImpl.cpp  sequenced_destinationImpl.cpp
practica4_a/: package.xml
practica4_a/include/practica4/: Navigate.hpp
practica4_a/maps/: map.pgm  map.yaml  map1.pgm
practica4_a/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
practica4_a/src/: nodo_sequence.cpp
practica4_a/src/practica4/: Navigate.cpp
practica5/: CMakeLists.txt  package.xml
practica5/behavior_trees_xml/: tree.xml  tree2.xml  tree_1.xml  tree_2.xml  tree_Turn.xml  tree_object.xml  tree_point.xml
practica5/include/practica5/: Go_object.hpp  Go_point.hpp  RGBDFilter.hpp  Turn.hpp  nodo_rgbd.hpp  turn.hpp
practica5/launch/: behavior.launch
practica5/maps/: map2.pgm  map2.yaml
practica5/src/: nodo_rgbd.cpp  practica5.cpp
practica5/src/practica5/: Go_object.cpp  Go_point.cpp  RGBDFilter.cpp  Turn.cpp  nodo_rgbd.cpp  turn.cpp
practica5_1/: CMakeLists.txt  package.xml
practica5_1/launch/: behavior.launch
practica5_1/src/: nodo_rgbd.cpp
softarq_msgs/: package.xml
